--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,31 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
+# Dependencies
 node_modules
-dist
-dist-ssr
-*.local
+.pnp
+.pnp.js
 
-# Editor directories and files
+# Testing
+coverage
+
+# Production
+dist
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Secrets & Keys
+google-services.json
+GoogleService-Info.plist
+*.jks
+*.p12
+*.keystore
+key.properties
+
+# IDEs and editors
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,3 +35,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Capacitor / Mobile
+/android
+/ios
