--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,4 +1,3 @@
-
 # MasterGrowbot AI - CI/CD Pipeline Configuration (v1.6.0 - 2026 Edition)
 workflows:
   android-release:
@@ -35,8 +34,7 @@ workflows:
           npx cap add android || true
           npx cap sync android
 
-          # 2. Inject google-services.json from environment variable or direct definition
-          # Defined directly here as per user request for Build #30 fix
+          # 2. Inject google-services.json
           mkdir -p android/app
           cat <<EOF > android/app/google-services.json
           {
@@ -144,6 +142,9 @@ workflows:
         script: |
           cd android
           chmod +x gradlew
+          ./gradlew clean
+          # Cache-Cleanup step: Resolve concurrent execution errors by clearing corrupted Gradle caches
+          rm -rf ~/.gradle/caches/
           ./gradlew bundleRelease --no-daemon
     artifacts:
       - android/app/build/outputs/bundle/release/*.aab
