--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,4 +1,4 @@
-# MasterGrowbot AI - CI/CD Pipeline Configuration (v1.6.1 - 2026 Edition)
+# MasterGrowbot AI - CI/CD Pipeline Configuration (v1.6.2 - 2026 Edition)
 workflows:
   android-release:
     name: Android Release Build 2026
@@ -28,15 +28,17 @@ workflows:
       - name: Web Build
         script: |
           npm run build
-      - name: Capacitor Sync & Self-Healing Config
+      - name: Capacitor Sync & Deep Repair
         script: |
-          # 1. Ensure android project is present and synced
-          npx cap add android || true
+          # 1. Force a fresh start to recreate missing gradlew scripts
+          rm -rf android
+          npx cap add android
           npx cap sync android
 
           # 2. Inject google-services.json
           mkdir -p android/app
           cat <<EOF > android/app/google-services.json
+          $(cat <<'JSON'
           {
             "project_info": {
               "project_number": "360575943200",
@@ -55,114 +57,40 @@ workflows:
                     "client_type": 3
                   }
                 ],
-                "api_key": [ { "current_key": "AIzaSyBEmRHHbEqZvbYwgOmuk8THcxuxJSlewlg" } ],
-                "services": {
-                  "appinvite_service": {
-                    "other_platform_oauth_client": [
-                      { "client_id": "360575943200-mq17ju3a221117rgu96v7as1b4o49rq8.apps.googleusercontent.com", "client_type": 3 }
-                    ]
-                  }
-                }
+                "api_key": [ { "current_key": "AIzaSyBEmRHHbEqZvbYwgOmuk8THcxuxJSlewlg" } ]
               }
             ],
             "configuration_version": "1"
           }
+          JSON
+          )
           EOF
 
-          # 3. Root build.gradle replacement (FIXED: Added mandatory ext block)
+          # 3. Apply the Bouncy Castle security fix to the fresh build.gradle
           cat <<EOF > android/build.gradle
           buildscript {
-              repositories {
-                  google()
-                  mavenCentral()
-              }
+              repositories { google(); mavenCentral() }
               dependencies {
                   classpath 'com.android.tools.build:gradle:8.2.1'
                   classpath 'com.google.gms:google-services:4.4.2'
               }
           }
-          
           ext {
               compileSdkVersion = 34
               targetSdkVersion = 34
               minSdkVersion = 22
           }
-
           allprojects {
-              repositories {
-                  google()
-                  mavenCentral()
-              }
+              repositories { google(); mavenCentral() }
               configurations.all {
-                  resolutionStrategy {
-                      force 'org.bouncycastle:bcprov-jdk18on:1.77'
-                  }
+                  resolutionStrategy { force 'org.bouncycastle:bcprov-jdk18on:1.77' }
               }
-          }
-          task clean(type: Delete) {
-              delete rootProject.buildDir
           }
           EOF
-
+          
           # 4. Inject Firebase dependencies and apply plugin
           sed -i '' '/dependencies {/a \    implementation platform("com.google.firebase:firebase-bom:34.7.0")\n    implementation "com.google.firebase:firebase-analytics"' android/app/build.gradle
           grep -q "com.google.gms.google-services" android/app/build.gradle || echo 'apply plugin: "com.google.gms.google-services"' >> android/app/build.gradle
-
-          # 5. Overwrite AndroidManifest.xml for permissions
-          cat <<EOF > android/app/src/main/AndroidManifest.xml
-          <?xml version="1.0" encoding="utf-8"?>
-          <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-              <uses-permission android:name="android.permission.INTERNET" />
-              <uses-permission android:name="com.android.vending.BILLING" />
-              <uses-permission android:name="android.permission.CAMERA" />
-              <uses-permission android:name="android.permission.RECORD_AUDIO" />
-              <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-              <application
-                  android:allowBackup="true"
-                  android:icon="@mipmap/ic_launcher"
-                  android:label="@string/app_name"
-                  android:roundIcon="@mipmap/ic_launcher_round"
-                  android:supportsRtl="true"
-                  android:theme="@style/AppTheme">
-                  <activity
-                      android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"
-                      android:name=".MainActivity"
-                      android:label="@string/title_activity_main"
-                      android:theme="@style/AppTheme.NoActionBarLaunch"
-                      android:launchMode="singleTop"
-                      android:exported="true">
-                      <intent-filter>
-                          <action android:name="android.intent.action.MAIN" />
-                          <category android:name="android.intent.category.LAUNCHER" />
-                      </intent-filter>
-                      <intent-filter>
-                          <action android:name="android.intent.action.VIEW" />
-                          <category android:name="android.intent.category.DEFAULT" />
-                          <category android:name="android.intent.category.BROWSABLE" />
-                          <data android:scheme="mastergrowbot" android:host="callback" />
-                      </intent-filter>
-                  </activity>
-                  <provider
-                      android:name="androidx.core.content.FileProvider"
-                      android:authorities="\${applicationId}.fileprovider"
-                      android:exported="false"
-                      android:grantUriPermissions="true">
-                      <meta-data
-                          android:name="android.support.FILE_PROVIDER_PATHS"
-                          android:resource="@xml/file_paths"></meta-data>
-                  </provider>
-              </application>
-          </manifest>
-          EOF
-
-      - name: Set up KeyStore
-        script: |
-          cat >> android/key.properties <<EOF
-          storePassword=$CM_KEYSTORE_PASSWORD
-          keyPassword=$CM_KEY_PASSWORD
-          keyAlias=$CM_KEY_ALIAS
-          storeFile=$CM_KEYSTORE_PATH
-          EOF
 
       - name: Build Android App Bundle
         script: |
